# pixel-embed-wasm

./: .gitattributes  Cargo.toml  README.md  index.html  script.js  style.css
.github/workflows/: deploy-pages.yml
src/: lib.rs
